--- a/README.adoc
+++ b/README.adoc
@@ -69,7 +69,7 @@ initializeAndStartScst - Removes unnecessary code for SCST and starts Jenkins
 ```
 
 Assuming that you've just created a repo in your organization to host your custom App Staters.
-Let's assume that the repo is present at `http://foo.com/myrepo` then
+Let's assume that the repo is present at `http://www.foo.com/myrepo` then
 it's enough for you to do the following steps.
 
 [source]
@@ -77,9 +77,9 @@ it's enough for you to do the following steps.
 $ git clone https://github.com/spring-io/build-scripts
 $ cd build-scripts
 $ git remote remove origin
-$ git remote add origin http://foo.com/myrepo
+$ git remote add origin http://www.foo.com/myrepo
 $ git remote add upstream https://github.com/spring-io/build-scripts
-$ ./gradlew initializeAndStartScst -PrepoUrl=http://foo.com/myrepo
+$ ./gradlew initializeAndStartScst -PrepoUrl=http://www.foo.com/myrepo
 $ # alter the code in whatever way you need
 $ git add .
 $ git commit -m "Initialized App Starters for new repo"
